--- a/sway/config
+++ b/sway/config
@@ -208,7 +208,6 @@ bindsym $mod+r mode "resize"
 # Read `man 5 sway-bar` for more information about this section.
 bar {
     position top
-
     # When the status_command prints a new line to stdout, swaybar updates.
     # The default just shows the current date and time.
     # status_command while date +'%Y-%m-%d %X'; do sleep 1; done
@@ -272,8 +271,13 @@ mode "$mode_system" {
 bindsym $mod+p mode "$mode_system"
 
 bindsym $mod+t exec Thunar
-bindsym $mod+q exec chromium
+bindsym $mod+q exec firefox-esr
 bindsym $mod+Control_L exec /home/poo/公共/touchpad.py
 
 # 设置窗口浮动
 for_window [class="wechat"] floating enable
+
+# 弹窗
+# popups
+for_window [window_role="pop-up"] floating enable
+for_window [window_role="task_dialog"] floating enable
