--- a/waybar/config
+++ b/waybar/config
@@ -27,7 +27,7 @@
     },
     "custom/menu": {
         "format": "🌀",
-        "on-click": "wofi --show=drun -I --height=500 --width=600 --gtk-dark --columns=2 --prompt='请输入软件名称'",
+        "on-click": "wofi --show=drun -I --height=500 --width=300 --xoffset=0 --yoffset=423 --gtk-dark --prompt='请输入软件名称'",
         "tooltip-format": "左键程序菜单\r右键注销菜单",
         "menu": "on-click-right",
         "menu-file": "$HOME/.config/waybar/power_menu.xml",
