--- a/sway/config
+++ b/sway/config
@@ -115,10 +115,10 @@ input "2362:597:SYNA3602:00_093A:0255_Touchpad" {
 #
 # Workspaces:
 #
-    set $ws1 "1-"
-    set $ws2 "2-"
-    set $ws3 "3-"
-    set $ws4 "4-"
+    set $ws1 "1"
+    set $ws2 "2"
+    set $ws3 "3"
+    set $ws4 "4"
     set $ws5 "5"
     set $ws6 "6"
     set $ws7 "7"
@@ -285,19 +285,18 @@ bindsym $mod+q exec firefox-esr
 bindsym $mod+Control_L exec /home/poo/.config/sway/touchpad.py
 bindsym $mod+Shift+s exec grim -g "$(slurp)" - | wl-copy
 bindsym Print exec grim - | wl-copy
-bindsym $mod+Shift+i exec foot --app-id 'launcher' -e bash -c "/home/poo/.config/sway/systeminfo; read -p ''"
+bindsym $mod+Shift+i exec /home/poo/.config/sway/systeminfo | wofi -d -G -s /home/poo/.config/sway/systeminfo.css -W 485 -H 530
 
 # 设置窗口浮动
 for_window [class="wechat"] floating enable
 for_window [app_id="io.github.quodlibet.QuodLibet"] floating enable
-for_window [app_id="^launcher$"] floating enable, border none, resize set width 500 px height 430 px, move position center
 
 # 弹窗
 # popups
 for_window [window_role="pop-up"] floating enable
 for_window [window_role="task_dialog"] floating enable
 
-for_window [app_id="firefox-esr"] move container workspace number $ws1
-for_window [app_id="Thunar"] move container workspace number $ws2
-for_window [app_id="foot"] move container workspace number $ws3
-for_window [app_id="sublime_text"] move container workspace number $ws4
+#for_window [app_id="firefox-esr"] move container workspace number $ws1
+#for_window [app_id="Thunar"] move container workspace number $ws2
+#for_window [app_id="foot"] move container workspace number $ws3
+#for_window [app_id="sublime_text"] move container workspace number $ws4
