--- a/sway/config
+++ b/sway/config
@@ -224,6 +224,7 @@ bar {
     status_command ~/.config/sway/bar.sh
     tray_padding 8
     font Noto Sans CJK SC Bold 9
+    icon_theme Adwaita
 
     colors {
         statusline #ffffff
@@ -237,12 +238,12 @@ include /etc/sway/config.d/*
 exec_always --no-startup-id fcitx5 -d --replace
 exec_always --no-startup-id blueman-applet
 
-bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5%
-bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5%
-bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
-bindsym XF86AudioMicMute exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
-bindsym XF86MonBrightnessDown exec brightnessctl set 5%-
-bindsym XF86MonBrightnessUp exec brightnessctl set 5%+
+bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5%;exec pkill -SIGUSR1 -f /home/poo/.config/sway/bar.sh
+bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5%;exec pkill -SIGUSR1 -f /home/poo/.config/sway/bar.sh
+bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle;exec pkill -SIGUSR1 -f /home/poo/.config/sway/bar.sh
+bindsym XF86AudioMicMute exec pactl set-source-mute @DEFAULT_SOURCE@ toggle;exec pkill -SIGUSR1 -f /home/poo/.config/sway/bar.sh
+bindsym XF86MonBrightnessDown exec brightnessctl set 5%-;exec pkill -SIGUSR1 -f /home/poo/.config/sway/bar.sh
+bindsym XF86MonBrightnessUp exec brightnessctl set 5%+;exec pkill -SIGUSR1 -f /home/poo/.config/sway/bar.sh
 
 # 隐藏或者显示bar
 # bar toggle, hide or show
@@ -284,7 +285,7 @@ bindsym $mod+p mode "$mode_system"
 
 bindsym $mod+t exec Thunar
 bindsym $mod+q exec firefox-esr
-bindsym $mod+Control_L exec /home/poo/.config/sway/touchpad.py
+bindsym $mod+Control_L exec /home/poo/.config/sway/touchpad.py;exec pkill -SIGUSR1 -f /home/poo/.config/sway/bar.sh
 bindsym $mod+Shift+s exec grim -g "$(slurp)" - | wl-copy
 bindsym Print exec grim - | wl-copy
 bindsym $mod+Shift+i exec /home/poo/.config/sway/systeminfo | wofi -d -G -s /home/poo/.config/sway/systeminfo.css -W 485 -H 530
@@ -292,6 +293,8 @@ bindsym $mod+Shift+i exec /home/poo/.config/sway/systeminfo | wofi -d -G -s /hom
 # 设置窗口浮动
 for_window [class="wechat"] floating enable
 for_window [app_id="io.github.quodlibet.QuodLibet"] floating enable
+for_window [title="文件操作进度"] floating enable
+for_window [title="确认替换文件"] floating enable
 
 # 弹窗
 # popups
