--- a/sway/config
+++ b/sway/config
@@ -27,7 +27,7 @@ include /etc/sway/config-vars.d/*
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
 # output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
-output * bg /home/poo/图片/2.jpg fill
+output * bg /home/poo/图片/4.jpg fill
 #
 # Example configuration:
 #
@@ -87,8 +87,9 @@ input "2362:597:SYNA3602:00_093A:0255_Touchpad" {
     bindsym $mod+Shift+c reload
 
     # Exit sway (logs you out of your Wayland session)
-    bindsym $mod+Shift+e exec swaynag -t warning -m '你确定要退出sway? 这将会退出Wayland会话。' -B '是的，退出sway' 'swaymsg exit'
-#
+    # bindsym $mod+Shift+e exec swaynag -t warning -m '你确定要退出sway? 这将会退出Wayland会话。' -B '是的，退出sway' 'swaymsg exit'
+    bindsym $mod+Shift+e exec swaymsg exit
+# 
 # Moving around:
 #
     # Move your focus around
@@ -115,10 +116,10 @@ input "2362:597:SYNA3602:00_093A:0255_Touchpad" {
 #
 # Workspaces:
 #
-    set $ws1 "1"
-    set $ws2 "2"
-    set $ws3 "3"
-    set $ws4 "4"
+    set $ws1 "1:"
+    set $ws2 "2:"
+    set $ws3 "3:"
+    set $ws4 "4:"
     set $ws5 "5"
     set $ws6 "6"
     set $ws7 "7"
@@ -217,13 +218,12 @@ bindsym $mod+r mode "resize"
 #
 # Read `man 5 sway-bar` for more information about this section.
 bar {
-    # position top
+    position top
     # When the status_command prints a new line to stdout, swaybar updates.
     # The default just shows the current date and time.
     # status_command while date +'%Y-%m-%d %X'; do sleep 1; done
     status_command ~/.config/sway/bar.sh
-    tray_padding 8
-    font Noto Sans CJK SC Bold 9
+    font Noto Sans CJK SC Bold 10
     icon_theme Adwaita
 
     colors {
@@ -293,15 +293,15 @@ bindsym $mod+Shift+i exec /home/poo/.config/sway/systeminfo | wofi -d -G -s /hom
 # 设置窗口浮动
 for_window [class="wechat"] floating enable
 for_window [app_id="io.github.quodlibet.QuodLibet"] floating enable
-for_window [title="文件操作进度"] floating enable
-for_window [title="确认替换文件"] floating enable
 
 # 弹窗
 # popups
 for_window [window_role="pop-up"] floating enable
 for_window [window_role="task_dialog"] floating enable
+for_window [title="文件操作进度"] floating enable
+for_window [title="确认替换文件"] floating enable
 
-#for_window [app_id="firefox-esr"] move container workspace number $ws1
-#for_window [app_id="Thunar"] move container workspace number $ws2
-#for_window [app_id="foot"] move container workspace number $ws3
-#for_window [app_id="sublime_text"] move container workspace number $ws4
+for_window [app_id="firefox-esr"] move container workspace number $ws1;workspace number $ws1
+for_window [app_id="Thunar"] move container workspace number $ws2;workspace number $ws2
+for_window [app_id="foot"] move container workspace number $ws3;workspace number $ws3
+for_window [app_id="sublime_text"] move container workspace number $ws4;workspace number $ws4
