--- a/sway/config
+++ b/sway/config
@@ -120,7 +120,7 @@ input "2362:597:SYNA3602:00_093A:0255_Touchpad" {
     set $ws2 "2:"
     set $ws3 "3:"
     set $ws4 "4:"
-    set $ws5 "5"
+    set $ws5 "5-"
     set $ws6 "6"
     set $ws7 "7"
     set $ws8 "8"
@@ -305,3 +305,4 @@ for_window [app_id="firefox-esr"] move container workspace number $ws1;workspace
 for_window [app_id="Thunar"] move container workspace number $ws2;workspace number $ws2
 for_window [app_id="foot"] move container workspace number $ws3;workspace number $ws3
 for_window [app_id="sublime_text"] move container workspace number $ws4;workspace number $ws4
+for_window [class="wpsoffice"] move container workspace number $ws5;workspace number $ws5
